app/globals.css
@import "tailwindcss";

:root {
    --background: #ffffff;
    --foreground: #171717;
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-geist-sans);
    --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
    :root {
        --background: #0a0a0a;
        --foreground: #ededed;
    }
}

@layer base {
    body {
        background: var(--background);
        color: var(--foreground);
        font-family: Arial, Helvetica, sans-serif;
    }

    a {
        @apply text-blue-400;
    }

    nav a {
        @apply text-gray-400;
    }
}

@layer components {
    .button {
        @apply flex h-12 w-full items-center text-background justify-center gap-2 rounded-lg bg-foreground px-5 transition-colors hover:bg-[#383838] dark:hover:bg-[#ccc] md:w-40;
    }
    .button--outline {
        @apply border border-solid border-black/8 text-foreground hover:border-transparent hover:bg-black/4 dark:border-white/[.145] dark:hover:bg-[#1a1a1a] bg-transparent;
    }
}

